methods.picture.PictureMono1.scala.code
override def run() {
  
  def faireV(){
    avance() ; avance()
    baisseBrosse()
    leveBrosse()
    avance() ; gauche() ; avance() 
    baisseBrosse()
    leveBrosse()
    recule() ; droite() ; avance()
    baisseBrosse()
    leveBrosse()
    avance() ; avance() ; gauche()
  }
  for (k <-1 to 4){
    FaireV()
  }
}